--- a/external.html
+++ b/external.html
@@ -68,15 +68,20 @@
     <div class="container">
 
 <!-- Sidebar -->
-        <div class="sidebar">           
+        <div class="sidebar">
             <div class="examples">
-
+                <p>EXTERNAL SNIPPET</p>
+            </div>
+            
+            <div class="examples">
+                <p>EXAMPLES</p>
             </div>
 
             <div class="snippets">
+                <p>MY CODE SNIPPETS</p>
+                <button class="add hide" onclick="addItem()"><img src="./img/plus.svg" alt="">Add snippet</button>
             </div>
-            <button class="add hide" onclick="addItem()"><img src="./img/plus.svg" alt="">Add snippet</button>
-            
+
             <div class="signout container-bot hide">
                 <img src="./img/person.svg" style="height: 24px;">
                 <p class="text-3">Robert Parker</p>
