--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <!-- Sign out section -->
                 <div class="signout container-bot hide">
                     <img src="./img/person.svg" style="height: 24px;">
-                    <p class="text-3">email@gemail.com</p>
+                    <p class="text-3">email@gmail.com</p>
                     <button class="btn-round" onclick="authenticate('sign out')"><img src="./img/exit.svg" alt=""></button>
                 </div>
 
