--- a/external.html
+++ b/external.html
@@ -77,7 +77,7 @@
                 <!-- Sign out -->
                 <div class="signout container-bot hide">
                     <img src="./img/person.svg" style="height: 24px;">
-                    <p class="text-3">email@gmail.com</p>
+                    <p class="text-3">Profile Name</p>
                     <button class="btn-round" onclick="authenticate('sign out')"><img src="./img/exit.svg" alt=""></button>
                 </div>
 
@@ -125,6 +125,9 @@
         </div>
     </body>
 
-    <script> let pageType = 'external'</script>
+    <script> let pageType ='link'</script>
     <script src="main.js"></script>
+    <script>
+            
+    </script>
 </html>
