--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <!-- Sign out section -->
                 <div class="signout container-bot hide">
                     <img src="./img/person.svg" style="height: 24px;">
-                    <p class="text-3">email@gmail.com</p>
+                    <p class="text-3">Profile Name</p>
                     <button class="btn-round" onclick="authenticate('sign out')"><img src="./img/exit.svg" alt=""></button>
                 </div>
 
@@ -123,7 +123,6 @@
             <img src="./img/loader.svg">
         </div>
     </body>
-
-    <script> let pageType = 'reg'</script>
+    <script> let pageType =''</script>
     <script src="main.js"></script>
 </html>
